# neoirc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/func/: mod.rs
src/func/channel/: channel.rs  mod.rs
src/func/message/: message.rs  mod.rs
src/func/roles/: mod.rs  roles.rs
src/func/roles/db/: mod.rs
src/func/user/: user.rs
src/func/user/db/: create.rs  delete.rs  insert.rs  mod.rs  model.rs  select.rs  update.rs
src/server/: mod.rs  server.rs  tcpparse.rs
src/server/db/: create.rs  mod.rs
