[package]
name = "neoirc"
version = "0.1.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
async-std = "1.8.0"
actix-web = "3.3.2"
serde = "1.0.118"
serde_json = "1.0.61"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-rustls", "sqlite" ] }
whirlpool  = "0.9.0"
rand = "0.8.0"